--- a/Ashish Jha __ Home_files/styles.css
+++ b/Ashish Jha __ Home_files/styles.css
@@ -822,7 +822,7 @@ hr.hr-separator {
 }
 
 .timeline-item {
-    border-top: 2px dashed var(--clr-primary-5);
+    border-top: 2px dashed #804cff;
     margin: 0;
     padding: 4rem 2rem;
     position: relative
@@ -833,7 +833,7 @@ hr.hr-separator {
 }
 
 .timeline-item:nth-child(even) {
-    border-left: 2px dashed var(--clr-primary-5);
+    border-left: 2px dashed #804cff;
     border-top-left-radius: 2rem;
     border-bottom-left-radius: 2rem;
     margin-right: 2rem;
@@ -841,13 +841,115 @@ hr.hr-separator {
 }
 
 .timeline-item:nth-child(odd) {
-    border-right: 2px dashed var(--clr-primary-5);
+    border-right: 2px dashed #804cff;
     border-top-right-radius: 2rem;
     border-bottom-right-radius: 2rem;
     margin-left: 2rem;
     padding-left: 0
 }
-
+/* From Uiverse.io by Smit-Prajapati */ 
+.loader {
+    --size: 171px;
+    --duration: 2s;
+    --logo-color: grey;
+    --background: linear-gradient(0deg, rgba(50, 50, 50, 0.2) 0%, rgba(100, 100, 100, 0.2) 100%);
+    height: var(--size);
+    aspect-ratio: 1;
+    /* position: absolute; */
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(206%, -50%);
+  }
+  
+  .loader .box {
+    position: absolute;
+    background: rgba(100, 100, 100, 0.15);
+    background: var(--background);
+    border-radius: 50%;
+    border-top: 1px solid rgba(100, 100, 100, 1);
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 10px 10px -0px;
+    backdrop-filter: blur(5px);
+    animation: ripple var(--duration) infinite ease-in-out;
+      top: 50% !important;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+  
+  .loader .box:nth-child(1) {
+    inset: 40%;
+    z-index: 99;
+  }
+  
+  .loader .box:nth-child(2) {
+    inset: 30%;
+    z-index: 98;
+    border-color: rgba(100, 100, 100, 0.8);
+    animation-delay: 0.2s;
+  }
+  
+  .loader .box:nth-child(3) {
+    inset: 20%;
+    z-index: 97;
+    border-color: rgba(100, 100, 100, 0.6);
+    animation-delay: 0.4s;
+  }
+  
+  .loader .box:nth-child(4) {
+    inset: 10%;
+    z-index: 96;
+    border-color: rgba(100, 100, 100, 0.4);
+    animation-delay: 0.6s;
+    
+  }
+  
+  .loader .box:nth-child(5) {
+    inset: 0%;
+    z-index: 95;
+    border-color: rgba(100, 100, 100, 0.2);
+    animation-delay: 0.8s;
+  }
+  
+  .loader .logo {
+    position: absolute;
+    inset: 0;
+    display: grid;
+    place-content: center;
+    padding: 30%;
+  }
+  
+  .loader .logo svg {
+    fill: var(--logo-color);
+    width: 100%;
+    animation: color-change var(--duration) infinite ease-in-out;
+  }
+  
+  @keyframes ripple {
+    0% {
+      transform: scale(1);
+      box-shadow: rgba(0, 0, 0, 0.3) 0px 10px 10px -0px;
+    }
+    50% {
+      transform: scale(1.3);
+      box-shadow: rgba(0, 0, 0, 0.3) 0px 30px 20px -0px;
+    }
+    100% {
+      transform: scale(1);
+      box-shadow: rgba(0, 0, 0, 0.3) 0px 10px 10px -0px;
+    }
+  }
+  
+  @keyframes color-change {
+    0% {
+      fill: var(--logo-color);
+    }
+    50% {
+      fill: white;
+    }
+    100% {
+      fill: var(--logo-color);
+    }
+  }
+  
 .timeline-item:first-child {
     border-top: 0;
     border-top-right-radius: 0
@@ -863,13 +965,13 @@ hr.hr-separator {
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     margin-bottom: 0;
-    background: var(--clr-primary-5);
+    background: #804cff;
     width: 2rem;
     height: 2rem;
     border-radius: 50%;
     display: grid;
     place-items: center;
-    color: var(--clr-primary-1);
+    color:#f4f4f4;
     font-weight: 700
 }
 
@@ -1850,3 +1952,14 @@ body {
     color: #888;
   }
   
+/* Add this CSS to your stylesheet */
+.timeline-item {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+.timeline-item.show {
+    opacity: 1;
+    transform: translateY(0);
+}
