--- a/Ashish Jha __ Home_files/styles.css
+++ b/Ashish Jha __ Home_files/styles.css
@@ -506,43 +506,87 @@ hr.hr-separator {
 }
 
 .service {
-    background: var(--clr-white);
+    position: relative;
+    background: #fefefe;
     padding: 3rem 1.5rem;
     margin-bottom: 2rem;
     border-radius: var(--radius);
     text-align: center;
-    -webkit-transition: var(--transition);
-    transition: var(--transition)
+    width: 21rem;
+    height: 26rem;
+    cursor: pointer;
+    overflow: hidden;
+    transition: var(--transition);
 }
 
 .service-icon {
     font-size: 2rem;
-    margin-bottom: 1.5rem
+    margin-bottom: 1.5rem;
 }
 
 .service .underline {
     width: 3rem;
     height: .12rem;
-    -webkit-transition: var(--transition);
-    transition: var(--transition)
+    transition: var(--transition);
 }
 
 .service p {
-    -webkit-transition: var(--transition);
-    transition: var(--transition)
+    transition: var(--transition);
 }
 
-.service:hover {
-    background: var(--clr-primary-5);
-    color: var(--clr-white)
+.service::before,
+.service::after {
+    position: absolute;
+    content: "";
+    width: 20%;
+    height: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 25px;
+    font-weight: bold;
+    background-color: #dedbd6;
+    transition: all 0.5s;
 }
+
+.service::before {
+    top: 0;
+    right: 0;
+    border-radius: 0 15px 0 100%;
+}
+
+.service::after {
+    bottom: 0;
+    left: 0;
+    border-radius: 0 100% 0 15px;
+}
+
+.service:hover::before,
+.service:hover::after {
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    transition: all 0.5s;
+}
+
+.service:hover:first-child:after {
+    content: "10th Standard";
+}
+.service:hover:nth-child(2):after {
+    content: "12th Standard";
+}
+.service:hover:last-child:after {
+    content: "Graduation";
+}
+
+
 
 .service:hover p {
-    color: var(--clr-white)
+    color: var(--clr-white);
 }
 
 .service:hover .underline {
-    background: var(--clr-white)
+    background: var(--clr-white);
 }
 
 @media screen and (min-width:676px) {
