--- a/Ashish Jha __ Home_files/styles.css
+++ b/Ashish Jha __ Home_files/styles.css
@@ -1030,7 +1030,7 @@ hr.hr-separator {
 }
 
 .blog {
-    background: var(--clr-grey-10)
+    background: var(--clr-grey-10) !important;
 }
 
 .card {
@@ -1174,11 +1174,11 @@ hr.hr-separator {
 }
 
 .single-project {
-    background: var(--clr-grey-10);
     border-radius: var(--radius);
     box-shadow: 5px 10px 18px #888;
     transform: translate3d(0, 0, 0);
-    transition: .2s
+    border-radius: 11px;
+    transition: .2s;
 }
 
 article.single-project:hover {
@@ -1192,7 +1192,10 @@ article.single-project:hover {
 }
 
 .project-container {
-    position: relative
+    position: relative;
+    border-top-right-radius: 11px;
+    border-top-left-radius: 11px;
+    margin: 10px;
 }
 
 .project-icon {
@@ -2008,45 +2011,55 @@ body {
     transform: translateY(0);
 }
 
-.wrapper {
-  max-width: 1100px;
-  width: 100%;
+.wrappers {
+  max-width: 100% !important;
+  width: 95%;
+  height: 100%;
   position: relative;
+  margin: auto;
+  min-height: 80vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
-.wrapper i {
-  top: 50%;
-  height: 50px;
-  width: 50px;
-  cursor: pointer;
-  font-size: 1.25rem;
-  position: absolute;
-  text-align: center;
-  line-height: 50px;
-  background: #fff;
-  border-radius: 50%;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.23);
-  transform: translateY(-50%);
-  transition: transform 0.1s linear;
+.wrappers i {
+    top: 50%;
+    height: 50px;
+    width: 50px;
+    cursor: pointer;
+    font-size: 1.25rem;
+    position: absolute;
+    text-align: center;
+    line-height: 50px;
+    background: #fff;
+    border-radius: 50%;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.23);
+    transform: translateY(-50%);
+    transition: transform 0.1s linear;
+    z-index: 10;
 }
-.wrapper i:active{
-  transform: translateY(-50%) scale(0.85);
+
+.wrappers i:active {
+    transform: translateY(-50%) scale(0.85);
 }
-.wrapper i:first-child{
-  left: -22px;
+
+.wrappers i:first-child {
+    left: -22px;
 }
-.wrapper i:last-child{
-  right: -22px;
+
+.wrappers i:last-child {
+    right: -22px;
 }
-.wrapper .carousel{
-  display: grid;
-  grid-auto-flow: column;
-  grid-auto-columns: calc((100% / 3) - 12px);
-  overflow-x: auto;
-  scroll-snap-type: x mandatory;
-  gap: 16px;
-  border-radius: 8px;
-  scroll-behavior: smooth;
-  scrollbar-width: none;
+
+.wrappers .carousel {
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: calc((100% / 4) - 12px);
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    gap: 4rem;
+    border-radius: 8px;
+    scroll-behavior: smooth;
 }
 .carousel::-webkit-scrollbar {
   display: none;
@@ -2069,7 +2082,7 @@ body {
 }
 .carousel .card {
   scroll-snap-align: start;
-  height: 342px;
+  height: fit-content;
   list-style: none;
   background: #fff;
   cursor: pointer;
@@ -2099,15 +2112,41 @@ body {
   color: #6A6D78;
   font-size: 1.31rem;
 }
+.arrow-left, .arrow-right {
+    top: 50%;
+    height: 50px;
+    width: 50px;
+    cursor: pointer;
+    font-size: 1.25rem;
+    position: absolute;
+    text-align: center;
+    line-height: 50px;
+    background: #fff;
+    border-radius: 50%;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.23);
+    transform: translateY(-50%);
+    transition: transform 0.1s linear;
+    z-index: 10;
+}
+.arrow-left:active, .arrow-right:active {
+    transform: translateY(-50%) scale(0.85);
+}
 
+.arrow-left {
+    left: -22px;
+}
+
+.arrow-right {
+    right: -22px;
+}
 @media screen and (max-width: 900px) {
-  .wrapper .carousel {
+  .wrappers .carousel {
     grid-auto-columns: calc((100% / 2) - 9px);
   }
 }
 
 @media screen and (max-width: 600px) {
-  .wrapper .carousel {
+  .wrappers .carousel {
     grid-auto-columns: 100%;
   }
 }
