--- a/Ashish Jha __ Home_files/styles.css
+++ b/Ashish Jha __ Home_files/styles.css
@@ -572,9 +572,11 @@ hr.hr-separator {
 .service:hover:first-child:after {
     content: "10th Standard";
 }
+
 .service:hover:nth-child(2):after {
     content: "12th Standard";
 }
+
 .service:hover:last-child:after {
     content: "Graduation";
 }
@@ -891,7 +893,8 @@ hr.hr-separator {
     margin-left: 2rem;
     padding-left: 0
 }
-/* From Uiverse.io by Smit-Prajapati */ 
+
+/* From Uiverse.io by Smit-Prajapati */
 .loader {
     --size: 171px;
     --duration: 2s;
@@ -903,9 +906,9 @@ hr.hr-separator {
     top: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(206%, -50%);
-  }
-  
-  .loader .box {
+}
+
+.loader .box {
     position: absolute;
     background: rgba(100, 100, 100, 0.15);
     background: var(--background);
@@ -914,86 +917,90 @@ hr.hr-separator {
     box-shadow: rgba(0, 0, 0, 0.3) 0px 10px 10px -0px;
     backdrop-filter: blur(5px);
     animation: ripple var(--duration) infinite ease-in-out;
-      top: 50% !important;
+    top: 50% !important;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-  }
-  
-  .loader .box:nth-child(1) {
+}
+
+.loader .box:nth-child(1) {
     inset: 40%;
     z-index: 99;
-  }
-  
-  .loader .box:nth-child(2) {
+}
+
+.loader .box:nth-child(2) {
     inset: 30%;
     z-index: 98;
     border-color: rgba(100, 100, 100, 0.8);
     animation-delay: 0.2s;
-  }
-  
-  .loader .box:nth-child(3) {
+}
+
+.loader .box:nth-child(3) {
     inset: 20%;
     z-index: 97;
     border-color: rgba(100, 100, 100, 0.6);
     animation-delay: 0.4s;
-  }
-  
-  .loader .box:nth-child(4) {
+}
+
+.loader .box:nth-child(4) {
     inset: 10%;
     z-index: 96;
     border-color: rgba(100, 100, 100, 0.4);
     animation-delay: 0.6s;
-    
-  }
-  
-  .loader .box:nth-child(5) {
+
+}
+
+.loader .box:nth-child(5) {
     inset: 0%;
     z-index: 95;
     border-color: rgba(100, 100, 100, 0.2);
     animation-delay: 0.8s;
-  }
-  
-  .loader .logo {
+}
+
+.loader .logo {
     position: absolute;
     inset: 0;
     display: grid;
     place-content: center;
     padding: 30%;
-  }
-  
-  .loader .logo svg {
+}
+
+.loader .logo svg {
     fill: var(--logo-color);
     width: 100%;
     animation: color-change var(--duration) infinite ease-in-out;
-  }
-  
-  @keyframes ripple {
+}
+
+@keyframes ripple {
     0% {
-      transform: scale(1);
-      box-shadow: rgba(0, 0, 0, 0.3) 0px 10px 10px -0px;
+        transform: scale(1);
+        box-shadow: rgba(0, 0, 0, 0.3) 0px 10px 10px -0px;
     }
+
     50% {
-      transform: scale(1.3);
-      box-shadow: rgba(0, 0, 0, 0.3) 0px 30px 20px -0px;
+        transform: scale(1.3);
+        box-shadow: rgba(0, 0, 0, 0.3) 0px 30px 20px -0px;
     }
+
     100% {
-      transform: scale(1);
-      box-shadow: rgba(0, 0, 0, 0.3) 0px 10px 10px -0px;
+        transform: scale(1);
+        box-shadow: rgba(0, 0, 0, 0.3) 0px 10px 10px -0px;
     }
-  }
-  
-  @keyframes color-change {
+}
+
+@keyframes color-change {
     0% {
-      fill: var(--logo-color);
+        fill: var(--logo-color);
     }
+
     50% {
-      fill: white;
+        fill: white;
     }
+
     100% {
-      fill: var(--logo-color);
+        fill: var(--logo-color);
     }
-  }
-  
+}
+
 .timeline-item:first-child {
     border-top: 0;
     border-top-right-radius: 0
@@ -1015,7 +1022,7 @@ hr.hr-separator {
     border-radius: 50%;
     display: grid;
     place-items: center;
-    color:#f4f4f4;
+    color: #f4f4f4;
     font-weight: 700
 }
 
@@ -1838,14 +1845,16 @@ body {
     gap: 0.5em;
     justify-content: center;
     align-items: center;
-    margin-top:3rem;
+    margin-top: 3rem;
 }
-.main i{
+
+.main i {
     font-size: 28px;
     color: #006400;
 
 }
-.sign{
+
+.sign {
     width: 180px;
     height: 60px;
     display: flex;
@@ -1946,7 +1955,7 @@ body {
 
 .card2:hover {
     cursor: pointer;
-    scale:1.0001;
+    scale: 1.0001;
     background-color: #fffaeb;
 }
 
@@ -1978,27 +1987,32 @@ body {
     background-color: #ffffff;
     padding: 15px 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Adds a soft shadow for depth */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* Adds a soft shadow for depth */
     display: flex;
-    justify-content: center; /* Centers the content horizontally */
-    align-items: center; /* Aligns content vertically */
-    gap: 10px; /* Adds space between phone and email */
+    justify-content: center;
+    /* Centers the content horizontally */
+    align-items: center;
+    /* Aligns content vertically */
+    gap: 10px;
+    /* Adds space between phone and email */
     max-width: 500px;
-    margin: 20px auto; /* Centers the box horizontally on the page */
-  }
-  
-  .contact-info {
+    margin: 20px auto;
+    /* Centers the box horizontally on the page */
+}
+
+.contact-info {
     font-size: 16px;
     font-weight: 500;
     color: #333;
-  }
-  
-  .separator {
+}
+
+.separator {
     font-size: 16px;
     font-weight: 500;
     color: #888;
-  }
-  
+}
+
 /* Add this CSS to your stylesheet */
 .timeline-item {
     opacity: 0;
@@ -2012,16 +2026,17 @@ body {
 }
 
 .wrappers {
-  max-width: 100% !important;
-  width: 95%;
-  height: 100%;
-  position: relative;
-  margin: auto;
-  min-height: 80vh;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+    max-width: 100% !important;
+    width: 95%;
+    height: 100%;
+    position: relative;
+    margin: auto;
+    min-height: 80vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
+
 .wrappers i {
     top: 50%;
     height: 50px;
@@ -2033,7 +2048,7 @@ body {
     line-height: 50px;
     background: #fff;
     border-radius: 50%;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.23);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
     transform: translateY(-50%);
     transition: transform 0.1s linear;
     z-index: 10;
@@ -2061,58 +2076,70 @@ body {
     border-radius: 8px;
     scroll-behavior: smooth;
 }
+
 .carousel::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
+
 .carousel.no-transition {
-  scroll-behavior: auto;
+    scroll-behavior: auto;
 }
+
 .carousel.dragging {
-  scroll-snap-type: none;
-  scroll-behavior: auto;
+    scroll-snap-type: none;
+    scroll-behavior: auto;
 }
+
 .carousel.dragging .card {
-  cursor: grab;
-  user-select: none;
+    cursor: grab;
+    user-select: none;
 }
+
 .carousel :where(.card, .img) {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 .carousel .card {
-  scroll-snap-align: start;
-  height: fit-content;
-  list-style: none;
-  background: #fff;
-  cursor: pointer;
-  padding-bottom: 15px;
-  flex-direction: column;
-  border-radius: 8px;
+    scroll-snap-align: start;
+    height: fit-content;
+    list-style: none;
+    background: #fff;
+    cursor: pointer;
+    padding-bottom: 15px;
+    flex-direction: column;
+    border-radius: 8px;
 }
+
 .carousel .card .img {
-  background: #8B53FF;
-  height: 148px;
-  width: 148px;
-  border-radius: 50%;
+    background: #8B53FF;
+    height: 148px;
+    width: 148px;
+    border-radius: 50%;
 }
+
 .card .img img {
-  width: 140px;
-  height: 140px;
-  border-radius: 50%;
-  object-fit: cover;
-  border: 4px solid #fff;
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 4px solid #fff;
 }
+
 .carousel .card h2 {
-  font-weight: 500;
-  font-size: 1.56rem;
-  margin: 30px 0 5px;
+    font-weight: 500;
+    font-size: 1.56rem;
+    margin: 30px 0 5px;
 }
+
 .carousel .card span {
-  color: #6A6D78;
-  font-size: 1.31rem;
+    color: #6A6D78;
+    font-size: 1.31rem;
 }
-.arrow-left, .arrow-right {
+
+.arrow-left,
+.arrow-right {
     top: 50%;
     height: 50px;
     width: 50px;
@@ -2123,12 +2150,14 @@ body {
     line-height: 50px;
     background: #fff;
     border-radius: 50%;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.23);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.23);
     transform: translateY(-50%);
     transition: transform 0.1s linear;
     z-index: 10;
 }
-.arrow-left:active, .arrow-right:active {
+
+.arrow-left:active,
+.arrow-right:active {
     transform: translateY(-50%) scale(0.85);
 }
 
@@ -2139,17 +2168,19 @@ body {
 .arrow-right {
     right: -22px;
 }
+
 @media screen and (max-width: 900px) {
-  .wrappers .carousel {
-    grid-auto-columns: calc((100% / 2) - 9px);
-  }
+    .wrappers .carousel {
+        grid-auto-columns: calc((100% / 2) - 9px);
+    }
 }
 
 @media screen and (max-width: 600px) {
-  .wrappers .carousel {
-    grid-auto-columns: 100%;
-  }
+    .wrappers .carousel {
+        grid-auto-columns: 100%;
+    }
 }
+
 .works-card {
     border: 1px solid #ddd;
     border-radius: 8px;
@@ -2205,6 +2236,7 @@ body {
     background-color: #f9f9f9;
     border-radius: 8px;
 }
+
 .projects-section {
     /* Your styles for the projects section */
 }
@@ -2215,7 +2247,8 @@ body {
     padding: 16px;
     margin-bottom: 16px;
     background-color: #fff;
-    height: auto; /* Adjust height as needed */
+    height: auto;
+    /* Adjust height as needed */
 }
 
 .project-row {
@@ -2245,55 +2278,68 @@ body {
     background-color: #f9f9f9;
     border-radius: 8px;
 }
+
 .project-button-container {
     display: flex;
-    flex-direction: column; /* Stack buttons vertically */
+    flex-direction: column;
+    /* Stack buttons vertically */
     gap: 1rem;
     margin-top: 1rem;
-    align-items: center; /* Center the buttons horizontally */
+    align-items: center;
+    /* Center the buttons horizontally */
 }
 
 .project-btn {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 10px 15px; /* Adjust padding for smaller size */
+    padding: 10px 15px;
+    /* Adjust padding for smaller size */
     border: none;
     border-radius: 4px;
     cursor: pointer;
     background-color: darkgreen;
     color: #fff;
-    font-size: 14px; /* Adjust font size for smaller size */
+    font-size: 14px;
+    /* Adjust font size for smaller size */
     text-align: center;
     transition: background-color 0.3s ease, transform 0.3s ease;
-    width: 12rem; /* Set a fixed width for the buttons */
-    margin: 0  !important;
+    width: 12rem;
+    /* Set a fixed width for the buttons */
+    margin: 0 !important;
 }
 
 .project-btn i {
-    margin-right: 8px; /* Space between icon and text */
+    margin-right: 8px;
+    /* Space between icon and text */
 }
 
 .project-btn:hover {
     background-color: green;
-    transform: scale(1.05); /* Slightly enlarge the button on hover */
+    transform: scale(1.05);
+    /* Slightly enlarge the button on hover */
 }
 
 .project-btn.know-more {
-    background-color: #007bff; /* Blue color for Know More button */
+    background-color: #007bff;
+    /* Blue color for Know More button */
 }
 
 .project-btn.know-more:hover {
-    background-color: #0056b3; /* Darker blue on hover */
+    background-color: #0056b3;
+    /* Darker blue on hover */
 }
 
 .project-btn.github {
-    background-color: #24292e; /* Dark gray color for GitHub button */
+    background-color: #24292e;
+    /* Dark gray color for GitHub button */
 }
 
 .project-btn.github:hover {
-    background-color: #000; /* Black on hover */
+    background-color: #000;
+    /* Black on hover */
 }
+
 .project-tags {
     display: flex;
     flex-wrap: wrap;
@@ -2306,4 +2352,353 @@ body {
     border-radius: 4px;
     padding: 4px 8px;
     font-size: 14px;
+}
+
+
+
+
+
+
+/* From Uiverse.io by abhshkpandey */
+.socket {
+    width: 170px;
+    height: 170px;
+    position: absolute;
+    left: 107%;
+    margin-left: -100px;
+    top: 8%;
+    margin-top: -106px;
+}
+
+.hex-brick {
+    color: #090909;
+    background: #e8e8e8;
+    cursor: pointer;
+    border: 1px solid #e8e8e8;
+    transition: all 0.3s;
+    box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
+    background: #000000;
+    width: 3px;
+    height: 70px;
+    position: absolute;
+    top: 5px;
+    animation-name: fade00;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    -webkit-animation-name: fade00;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+}
+
+.h2 {
+    transform: rotate(60deg);
+    -webkit-transform: rotate(60deg);
+}
+
+.h3 {
+    transform: rotate(-60deg);
+    -webkit-transform: rotate(-60deg);
+}
+
+.gel {
+    height: 30px;
+    width: 30px;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+.center-gel {
+    margin-left: -15px;
+    margin-top: -15px;
+    animation-name: pulse00;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    -webkit-animation-name: pulse00;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+}
+
+.c1 {
+    margin-left: -47px;
+    margin-top: -15px;
+}
+
+.c2 {
+    margin-left: -31px;
+    margin-top: -43px;
+}
+
+.c3 {
+    margin-left: 1px;
+    margin-top: -43px;
+}
+
+.c4 {
+    margin-left: 17px;
+    margin-top: -15px;
+}
+
+.c5 {
+    margin-left: -31px;
+    margin-top: 13px;
+}
+
+.c6 {
+    margin-left: 1px;
+    margin-top: 13px;
+}
+
+.c7 {
+    margin-left: -63px;
+    margin-top: -43px;
+}
+
+.c8 {
+    margin-left: 33px;
+    margin-top: -43px;
+}
+
+.c9 {
+    margin-left: -15px;
+    margin-top: 41px;
+}
+
+.c10 {
+    margin-left: -63px;
+    margin-top: 13px;
+}
+
+.c11 {
+    margin-left: 33px;
+    margin-top: 13px;
+}
+
+.c12 {
+    margin-left: -15px;
+    margin-top: -71px;
+}
+
+.c13 {
+    margin-left: -47px;
+    margin-top: -71px;
+}
+
+.c14 {
+    margin-left: 17px;
+    margin-top: -71px;
+}
+
+.c15 {
+    margin-left: -47px;
+    margin-top: 41px;
+}
+
+.c16 {
+    margin-left: 17px;
+    margin-top: 41px;
+}
+
+.c17 {
+    margin-left: -79px;
+    margin-top: -15px;
+}
+
+.c18 {
+    margin-left: 49px;
+    margin-top: -15px;
+}
+
+.c19 {
+    margin-left: -63px;
+    margin-top: -99px;
+}
+
+.c20 {
+    margin-left: 33px;
+    margin-top: -99px;
+}
+
+.c21 {
+    margin-left: 1px;
+    margin-top: -99px;
+}
+
+.c22 {
+    margin-left: -31px;
+    margin-top: -99px;
+}
+
+.c23 {
+    margin-left: -63px;
+    margin-top: 69px;
+}
+
+.c24 {
+    margin-left: 33px;
+    margin-top: 69px;
+}
+
+.c25 {
+    margin-left: 1px;
+    margin-top: 69px;
+}
+
+.c26 {
+    margin-left: -31px;
+    margin-top: 69px;
+}
+
+.c27 {
+    margin-left: -79px;
+    margin-top: -15px;
+}
+
+.c28 {
+    margin-left: -95px;
+    margin-top: -43px;
+}
+
+.c29 {
+    margin-left: -95px;
+    margin-top: 13px;
+}
+
+.c30 {
+    margin-left: 49px;
+    margin-top: 41px;
+}
+
+.c31 {
+    margin-left: -79px;
+    margin-top: -71px;
+}
+
+.c32 {
+    margin-left: -111px;
+    margin-top: -15px;
+}
+
+.c33 {
+    margin-left: 65px;
+    margin-top: -43px;
+}
+
+.c34 {
+    margin-left: 65px;
+    margin-top: 13px;
+}
+
+.c35 {
+    margin-left: -79px;
+    margin-top: 41px;
+}
+
+.c36 {
+    margin-left: 49px;
+    margin-top: -71px;
+}
+
+.c37 {
+    margin-left: 81px;
+    margin-top: -15px;
+}
+
+.r1 {
+    animation-name: pulse00;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-delay: 0.2s;
+    -webkit-animation-name: pulse00;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-delay: 0.2s;
+}
+
+.r2 {
+    animation-name: pulse00;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-delay: 0.4s;
+    -webkit-animation-name: pulse00;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-delay: 0.4s;
+}
+
+.r3 {
+    animation-name: pulse00;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-delay: 0.6s;
+    -webkit-animation-name: pulse00;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-delay: 0.6s;
+}
+
+.r1>.hex-brick {
+    animation-name: fade00;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-delay: 0.2s;
+    -webkit-animation-name: fade00;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-delay: 0.2s;
+}
+
+.r2>.hex-brick {
+    animation-name: fade00;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-delay: 0.4s;
+    -webkit-animation-name: fade00;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-delay: 0.4s;
+}
+
+.r3>.hex-brick {
+    animation-name: fade00;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-delay: 0.6s;
+    -webkit-animation-name: fade00;
+    -webkit-animation-duration: 2s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-delay: 0.6s;
+}
+
+@keyframes pulse00 {
+    0% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+
+    50% {
+        -webkit-transform: scale(0.01);
+        transform: scale(0.01);
+    }
+
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+@keyframes fade00 {
+    0% {
+        background: #252525;
+    }
+
+    50% {
+        background: #000000;
+    }
+
+    100% {
+        background: #353535;
+    }
 }
