expierence mobile view and ipad view completed

--- a/Ashish Jha __ Home_files/styles.css
+++ b/Ashish Jha __ Home_files/styles.css
@@ -2746,4 +2746,10 @@ body {
     .skills-card{
         width: auto !important;
     }
+    .service{
+        width: 100%;
+    }
+    .exper-content {
+        padding: 2rem 1rem;
+    }
 }
