--- a/Ashish Jha __ Home_files/styles.css
+++ b/Ashish Jha __ Home_files/styles.css
@@ -2706,7 +2706,7 @@ body {
 }
 
 .footer {
-    background-color: #000;
+    background-color: #333;
     color: #fff;
     padding: 20px 0;
     text-align: center;
@@ -2716,6 +2716,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
 }
@@ -2731,8 +2732,7 @@ body {
     font-size: 18px;
 }
 
-.footer-column p,
-.footer-column ul {
+.footer-column p, .footer-column ul {
     margin: 0;
     padding: 0;
     list-style: none;
@@ -2787,112 +2787,6 @@ p {
     margin-top: 20px;
 }
 
-
-ul {
-    list-style: none;
-}
-
-.example-2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.example-2 .icon-content {
-    margin: 0 10px;
-    position: relative;
-}
-
-.example-2 .icon-content .tooltip {
-    position: absolute;
-    top: -30px;
-    left: 50%;
-    transform: translateX(-50%);
-    color: #fff;
-    padding: 6px 10px;
-    border-radius: 5px;
-    opacity: 0;
-    visibility: hidden;
-    font-size: 14px;
-    transition: all 0.3s ease;
-}
-
-.example-2 .icon-content:hover .tooltip {
-    opacity: 1;
-    visibility: visible;
-    top: -50px;
-}
-
-.example-2 .icon-content a {
-    position: relative;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    color: #4d4d4d;
-    background-color: #fff;
-    transition: all 0.3s ease-in-out;
-}
-
-.example-2 .icon-content a:hover {
-    box-shadow: 3px 2px 45px 0px rgb(0 0 0 / 12%);
-}
-
-.example-2 .icon-content a svg {
-    position: relative;
-    z-index: 1;
-    width: 30px;
-    height: 30px;
-}
-
-.example-2 .icon-content a:hover {
-    color: white;
-}
-
-.example-2 .icon-content a .filled {
-    position: absolute;
-    top: auto;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 0;
-    background-color: #000;
-    transition: all 0.3s ease-in-out;
-}
-
-.example-2 .icon-content a:hover .filled {
-    height: 100%;
-}
-
-.example-2 .icon-content a[data-social="linkedin"] .filled,
-.example-2 .icon-content a[data-social="linkedin"]~.tooltip {
-    background-color: #0274b3;
-}
-
-.example-2 .icon-content a[data-social="github"] .filled,
-.example-2 .icon-content a[data-social="github"]~.tooltip {
-    background-color: #24262a;
-}
-
-.example-2 .icon-content a[data-social="instagram"] .filled,
-.example-2 .icon-content a[data-social="instagram"]~.tooltip {
-    background: linear-gradient(45deg,
-            #405de6,
-            #5b51db,
-            #b33ab4,
-            #c135b4,
-            #e1306c,
-            #fd1f1f);
-}
-
-.example-2 .icon-content a[data-social="youtube"] .filled,
-.example-2 .icon-content a[data-social="youtube"]~.tooltip {
-    background-color: #ff0000;
-}
-
 @media (max-width: 768px) {
     .footer-container {
         flex-direction: column;
@@ -2906,18 +2800,15 @@ ul {
 
 /* ------------------------------------mobile view-------------------------------------------------- */
 @media screen and (min-width: 320px) and (max-width: 1200px) {
-    .web-view {
+    .web-view{
         display: none;
     }
-
-    .mbl-view {
+    .mbl-view{
         display: inherit;
     }
-
-    hr {
+    hr{
         width: 150px !important;
     }
-
     .waves {
         width: 90rem;
         height: 61rem;
@@ -2964,11 +2855,9 @@ ul {
     .exper-content {
         padding: 2rem 1rem;
     }
-
     .project-row {
         flex-direction: column;
     }
-
     .socket {
         width: 269px;
         height: 188px;
@@ -2978,12 +2867,10 @@ ul {
         opacity: 0.6;
         margin-top: -150px;
     }
-
-    .contact-box {
+    .contact-box{
         flex-direction: column !important;
         margin: 20px;
     }
-
     .wave {
         position: absolute;
         width: 288vw;
@@ -2994,8 +2881,7 @@ ul {
         margin: -2% 0 17% -10%;
         background: linear-gradient(800deg, #4ec4ff, #8205ff 60%, #00ddeb);
     }
-
-    .main {
+    .main{
         margin-top: 0rem;
     }
 }
@@ -3003,7 +2889,7 @@ ul {
 @media screen and (min-width:320px) and (max-width:400px) {
     .wave {
         position: absolute;
-        width: 101rem;
+        width:101rem;
         height: 90rem;
         opacity: 0.55;
         left: -127px;
@@ -3011,8 +2897,7 @@ ul {
         margin: -2% 0 17% -10%;
         background: linear-gradient(800deg, #4ec4ff, #8205ff 60%, #00ddeb);
     }
-
-    .e-card {
+    .e-card{
         margin: 10px auto;
         background: transparent;
         box-shadow: 0px 8px 28px -9px rgba(0, 0, 0, 0.45);
