Update footer styling and add navigation links
Adjust the minimum height of the last-footer section in styles.css to 70vh for better visibility. Also, add a new foot-container div in index.html to contain the navigation links. The foot-container is divided into two sections: foot-container1 and foot-container2. The foot-container1 contains an unordered list with navigation links, while the foot-container2 is left empty for future use.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2923,7 +2923,7 @@ p {
 .last-footer {
     position: relative;
     background: #000;
-    min-height: 50vh;
+    min-height: 70vh;
     padding: 20px 50px;
     display: flex;
     justify-content: center;
@@ -3016,4 +3016,37 @@ p {
     100% {
         background-position-x: 0px;
     }
+}
+
+.foot-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.foot-container1 {
+    flex-basis: 40%;
+}
+
+.foot-container2 {
+    flex-basis: 50%;
+    background-color: #b4eb00;
+
+}
+.foot-collection{
+    text-decoration: none;
+    color: white;
+}
+.foot-collection li{
+    padding: 9px;
+    border-radius: 10px;
+    cursor: pointer;
+    background: transparent;
+    margin: 5px ;
+    text-align: center;
+    transition: hover 200ms ease-in-out;
+}
+.foot-collection li:hover{
+    background: #9f9f9f;
 }
