added new section in footer

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3017,7 +3017,31 @@ p {
     transform: scale(1.05);
     /* Slightly enlarge the element */
 }
+.thanks {
+    font-size: 12px !important;
+    color: #ccc;
+    text-align: center;
+    margin-top: 20px;
+}
 
+.thanks a {
+    transition: color 0.3s ease;
+}
+
+.thanks a:hover {
+    color: #fff;
+}
+.foot-title-a{
+    font-size: 12px;
+    white-space: nowrap;
+    position: relative;
+    display: inline-block;
+    background: linear-gradient(90deg, #c885ff, #1b786e, #ff0080, #ff8c00);
+    background-size: 400% 400%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: gradient-animation 5s ease infinite;
+}
 @media (max-width: 768px) {
     .footer-container {
         flex-direction: column;
