--- a/assets/styles.css
+++ b/assets/styles.css
@@ -549,7 +549,7 @@ hr.hr-separator {
     justify-content: center;
     font-size: 25px;
     font-weight: bold;
-    background-color: #dedbd6;
+    background:linear-gradient(45deg, #ead9c1, #b2d5dce2);
     transition: all 0.5s;
 }
 
@@ -3071,6 +3071,7 @@ p {
         bottom: 0;
         animation: animateLastWaves 4s linear infinite;
     }
+
     .section-strength-row .section-strength-col {
         flex: 0 0 48%;
         margin-bottom: 48px;
@@ -3251,6 +3252,7 @@ p {
         border-radius: 16px;
         overflow: hidden;
     }
+
     .section-strength-row .section-strength-col {
         flex: 0 0 100%;
         margin-bottom: 48px;
@@ -3262,3 +3264,26 @@ p {
 }
 
 
+.animated-svg:hover img {
+    animation: scale-rotate-animation 6s infinite;
+}
+
+@keyframes scale-rotate-animation {
+
+    0%,
+    100% {
+        transform: scale(1) rotate(0deg);
+    }
+
+    25% {
+        transform: scale(1.2) rotate(90deg);
+    }
+
+    50% {
+        transform: scale(1) rotate(180deg);
+    }
+
+    75% {
+        transform: scale(0.8) rotate(270deg);
+    }
+}
